--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,11 @@
     </a>
 
     <input type="email" class="enjoy-css" placeholder="Email" />
+
+    <form action="">
+
+        <input type="text">
+    </form>
 </body>
 
 
